feat(ai-context): AI Context Platform — per-asset AIContext, MCP tools, multi-chunk embeddings
Fixes open-metadata/openmetadata-collate#4789: vector embedding discarded
all body chunks except chunk 0, so long Knowledge Articles were never
semantically retrievable past their opening.

- AIContext spec type (generic envelope + typed assetContext) and
  AIContextBuilder: schema + PK/FK/frequent-joins/partitions + attached
  glossary terms (table+column), Context Center articles, knowledge
  pills, applied metrics, depth-1 lineage, and observability (latest
  profile shape + data-quality standing).
- OKF-style markdown renderer for LLM consumption; JSON alternative.
- New MCP tools: get_asset_context (Mode A: one call returns the full
  context for a chosen asset) and find_context (Mode B: semantic search
  over glossary/metrics/articles routed to candidate assets).
- First-class metric→asset APPLIED_TO edge (metric.appliedToAssets on
  entity + create API + repository wiring).
- AIContextIndex mixin materializes structural context onto table
  search docs (aiContext blob + queryable aiContextForeignKeyTargets).
- /contextCenter/memories gains primaryEntityId filter; fixed pill
  resolution edge direction.
- #4789 fix: VectorDocBuilder emits one doc per chunk; dedicated
  data_asset_embeddings_chunks index (delete-stale + bulk index, keyed
  parentId_chunkIndex); dual-write keeps hybrid search intact; read
  path dedupes (parentId, chunkIndex); chunk cleanup on delete/soft
  delete.

Verified: 40+ new unit tests; VectorEmbeddingIntegrationIT 9/9 (real
OpenSearch + DJL embeddings, incl. multi-chunk + legacy regression);
AIContextMcpIT 3/3 end-to-end against the full application harness.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>